feat(auth): implement authentication for admin hospital login